# aac-codec

./: CMakeLists.txt
libAACdec/src/: aac_ram.h  aacdec_drc_types.h  aacdec_hcr_bit.h  aacdecoder_lib.cpp
